# cpc-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  manage.py  pyproject.toml  start.sh
.github/workflows/: build_and_deploy.yml  linter.yml  pull_request.yml  test.yml
app/: errors.py  main.py  tasks.py
app/services/: telegram.py
app/services/gform/: gform.py  submissions.py
app/services/gform/tests/: test_submissions.py
app/settings/: __init__.py  environment.py  sentry.py  telegram.py  webhook.py
cpc/: asgi.py  celery.py  urls.py  wsgi.py
cpc/app/: admin.py  apps.py  errors.py  tasks.py  urls.py  views.py
cpc/app/context_processors/: __init__.py
cpc/app/management/commands/: run_telegram_bot.py
cpc/app/migrations/: 0001_initial.py  0002_delete_reminder.py  0003_initial.py  0004_alter_productreminder_shopify_id.py  0005_alter_productreminder_title.py  0006_productreminder_threshold.py  0007_collectionreminder.py  0008_delete_productreminder.py
cpc/app/models/: __init__.py  reminders.py
cpc/app/services/: __init__.py  chat_messages.py  google.py  telegram.py
cpc/app/services/test/: test_chat_messages.py
cpc/app/telegram/: bot.py  commands.py
cpc/app/templates/app/: base.html  index.html  privacy.html
cpc/logging/filters/: __init__.py  ignore_pattern_filter.py
cpc/network/: decorators.py
cpc/settings/: __init__.py  _base.py  apps.py  celery.py  databases.py  django.py  logging.py  middlewares.py  redis.py  rest_framework.py  rollbar.py  sentry.py  shopify.py  telegram.py  webhook.py  wsgi.py
cpc/shopify_backend/: apps.py  client.py  errors.py  services.py  tasks.py  urls.py  views.py
cpc/shopify_backend/data/: __init__.py
cpc/shopify_backend/management/commands/: inventory_reminder.py
cpc/shopify_backend/services/: __init__.py  order_create_webhook.py  product_count.py
cpc/shopify_backend/services/tests/: test_order_create_webhook.py
cpc/shopify_backend/services/tests/fixtures/order_create_webhook/: shop_webhook.json  (+3 more)
cpc/webhooks/: apps.py  errors.py  tasks.py  urls.py  views.py
cpc/webhooks/serializers/: google_form_input_serializer.py
cpc/webhooks/services/gform/: submissions.py
cpc/webhooks/services/gform/tests/: test_submissions.py
cpc/webhooks/services/google/: calendar.py
cpc/webhooks/views/: __init__.py  google_calendar_webhook.py  google_form_webhook.py  telegram_webhook.py
devops/devenv/: docker-compose.yml
devops/supervisor/: supervisord.conf
